<resources>
    <string name="app_name">GitHub Cl</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Sign in with GitHub</string>
    <string name="skip_login">Not this time</string>
    <string name="error_msg_account_not_found">Local account information not found. Please, consider re-authentication.</string>
    <string name="drawer_username_anonymous">Anonymous</string>
    <string name="transition_logo">logo</string>
    <string name="authentication_progress">Authenticating…</string>

    <string name="drawer_item_account">Account</string>
    <string name="drawer_item_log_out">Log out</string>
    <string name="dialog_logout_title">Log Out</string>
    <string name="dialod_logout_message">Are you sure you want to log out?</string>
    <string name="dialog_btn_positive">Yes</string>
    <string name="dialog_btn_negative">No</string>
    <string name="nav_repo_list">Repositories</string>
    <string name="nav_starred">Starred</string>
    <string name="empty_repos_list_message">You have no repositories at the moment.\nTry to search or create one!</string>
    <string name="action_search">Search</string>
    <string name="title_repos">Repositories</string>
    <string name="transit_repo_name">transit_repo_name</string>
    <string name="err_position_out_of_bounds">Did not find clicked item :(</string>
    <string name="action_refresh">Refresh</string>
    <string name="transit_repo_icon">transit_repo_icon</string>
    <string name="repo_info_create_date">Created</string>
    <string name="repo_info_update_date">Updated</string>
    <string name="repo_info_push_date">Last pushed</string>
    <string name="repo_info_date_empty"> - </string>
    <string name="repo_list_push_date_empty">No pushes so far</string>

    <string name="sign_thousand">k</string>
    <string name="sign_million">m</string>
    <string name="sign_billion">b</string>
    <string name="sign_trillion">t</string>
    <string name="repo_name_divider">/</string>
    <string name="search_input_hint">Search repos &amp; users</string>
    <string name="search_input_less_than">Please, input at least %s characters</string>

    <string name="shortcut_create_repo_title">Create</string>
    <string name="shortcut_create_repo_long_title">Create a Repository</string>
    <string name="shortcut_create_repo_disabled_title">Just disabled</string>
</resources>
