<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/blockDates"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtCreateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="02/16/2017 2:40 PM"
        android:textSize="12sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txtCreateTime"
        android:text="@string/repo_info_create_date"/>

    <TextView
        android:id="@+id/txtUpdateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/txtCreateTime"
        android:layout_below="@id/txtCreateTime"
        android:layout_marginTop="8dp"
        android:text="02/19/2017 5:24 PM"
        android:textSize="12sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txtUpdateTime"
        android:text="@string/repo_info_update_date"/>

    <TextView
        android:id="@+id/txtPushTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/txtUpdateTime"
        android:layout_below="@id/txtUpdateTime"
        android:layout_marginTop="8dp"
        android:text="02/26/2017 10:37 AM"
        android:textSize="12sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txtPushTime"
        android:text="@string/repo_info_push_date"/>
</RelativeLayout>